--- a/thetado-core/pom.xml
+++ b/thetado-core/pom.xml
@@ -40,11 +40,16 @@
 	  <version>1.4</version>
 	</dependency>
 	 
-	 <dependency>
-		  <groupId>ThetaDO</groupId>
-		  <artifactId>thetado-utils</artifactId>
-		  <version>${project.version}</version>
-		</dependency>
+	<dependency>
+	  <groupId>com.oracle</groupId>
+	  <artifactId>ojdbc14</artifactId>
+	  <version>10.2.0.3.0</version>
+	</dependency>
+	<dependency>
+	  <groupId>ThetaDO</groupId>
+	  <artifactId>thetado-utils</artifactId>
+	  <version>${project.version}</version>
+ 	</dependency>
 	 
   </dependencies>
 </project>
