--- a/thetado-utils/pom.xml
+++ b/thetado-utils/pom.xml
@@ -54,6 +54,12 @@
 	</dependency>
 	
 	<dependency>
+	  <groupId>javax.servlet</groupId>
+	  <artifactId>jstl</artifactId>
+	  <version>1.2</version>
+	</dependency>
+	
+	<dependency>
 	  <groupId>commons-net</groupId>
 	  <artifactId>commons-net</artifactId>
 	  <version>3.6</version>
