--- a/thetado-core/pom.xml
+++ b/thetado-core/pom.xml
@@ -29,10 +29,11 @@
 	</dependency>
 	 
 	<dependency>
-	  <groupId>org.apache.servicemix.bundles</groupId>
-	  <artifactId>org.apache.servicemix.bundles.jexcelapi</artifactId>
-	  <version>2.4.2_4</version>
-	</dependency>
+    <groupId>org.apache.servicemix.bundles</groupId>
+    <artifactId>org.apache.servicemix.bundles.jexcelapi</artifactId>
+    <version>2.4.2_4</version>
+</dependency>
+
 
 	<dependency>
 	  <groupId>commons-dbcp</groupId>
@@ -41,10 +42,11 @@
 	</dependency>
 	 
 	<dependency>
-	  <groupId>com.oracle</groupId>
-	  <artifactId>ojdbc14</artifactId>
-	  <version>10.2.0.3.0</version>
-	</dependency>
+    <groupId>com.oracle</groupId>
+    <artifactId>ojdbc14</artifactId>
+    <version>10.2.0.4.0</version>
+    <type>pom</type>
+</dependency>
 	<dependency>
 	  <groupId>ThetaDO</groupId>
 	  <artifactId>thetado-utils</artifactId>
