--- a/thetado-rpc/pom.xml
+++ b/thetado-rpc/pom.xml
@@ -30,10 +30,12 @@
 		</dependency>
     
 		<dependency>
-		  <groupId>json-lib</groupId>
-		  <artifactId>json-lib</artifactId>
-		  <version>2.2.2-jdk15</version>
+		    <groupId>net.sf.json-lib</groupId>
+		    <artifactId>json-lib</artifactId>
+		    <version>2.4</version>
+		    <classifier>jdk13</classifier>
 		</dependency>
+
 		
 		<dependency>
 		  <groupId>net.sf.ezmorph</groupId>
@@ -61,10 +63,11 @@
 	      <type>jar</type>
 	    </dependency>
 	    
-	    <dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>1.4</version>
+	   <dependency>
+		  <groupId>commons-dbcp</groupId>
+		  <artifactId>commons-dbcp</artifactId>
+		  <version>1.4</version>
+		  <type>pom</type>
 		</dependency>
 		
 		<dependency>
